<resources>
    <string name="app_name">My Application</string>
    <string name="save_Princess">Save Princess</string>
    <string name="start">START</string>
    <string name="help">HELP</string>
    <string name="push_box">Push Box</string>
    <string name="back">BACK</string>
    <string name="load">LOAD</string>
    <string name="game_help">Game Help</string>
    <string name="label_next_level">next level</string>
    <string name="label_reset_game">reset</string>
    <string name="label_exit_app">exit</string>
    <string name="label_prev_level">previous level</string>
    <string name="choose_level">Choose Level</string>
    <string name="prv_level_label">Previous level</string>
    <string name="next_level_label">next level</string>
    <string name="reset_label">reset</string>
    <string name="undo_prv_step">previous step</string>
    <string name="change_game_level">choose a level</string>
    <string name="tuichu_youxi">exit game</string>
    <string name="kaishi_youxi">start</string>
    <string name="youxi_jianjie">introduction</string>
    <string name="back_to_main_screen">Back to main screen</string>
    <string name="xgq_exit">exit level</string>
    <string name="no_more_levels">no more levels</string>
    <string name="already_first_level">already the first level</string>
    <string name="tui_xiangzi">Push Box</string>
    <string name="level1">LEVEL 1</string>
    <string name="level2">LEVEL 2</string>
    <string name="resume">RESUME</string>
    <string name="save">SAVE</string>
    <string name="pause">PAUSE</string>
    <string name="background">Night Mode : </string>
    <string name="character">Character</string>
    <string name="settings">Setting</string>
    <string name="scoreBoard">SCOREBOARD</string>
    <string name="loadgame">RESUME</string>
    <string name="sliding">Sliding Card</string>
    <string name="math24text">Math 24</string>
    <string name="quit">Quit</string>
    <string name="title_activity_catchball_scoreboard">CatchballScoreboardActivity</string>
    <string name="action_settings">Settings</string>
    <string name="_10_points">10 points</string>
    <string name="introduction">Introduction</string>
    <string name="boom">BOOM!</string>
    <string name="_30_points">30 points</string>
    <string name="in_this_game_you_can_control_a_fly_character_intent_on_catching_as_many_balls_as_possible">In this game, you can control a fly character intent on catching as many balls as possible.</string>
    <string name="you_must_elude_the_booms_and_try_to_get_the_points">You must elude the booms and try to get the points.</string>
    <string name="if_the_score_reaches_60_points_you_will_be_able_to_access_the_next_level">If the score reaches 60 points, you will be able to access the next level.</string>
    <string name="dash_to_catch_the_balls_and_watch_out_the_booms">Dash to catch the balls and watch out the booms!</string>
    <string name="rare_5">Rare 5</string>
    <string name="rare_3">Rare 3</string>
    <string name="rare_8">Rare 8</string>
    <string name="rare_2">Rare 2</string>
    <string name="rare_6">Rare 6</string>
    <string name="rare_9">Rare 9</string>
    <string name="rare_10">Rare 10</string>
    <string name="rare_12">Rare 12</string>
    <string name="rare_7">Rare 7</string>
    <string name="rare_13">Rare 13</string>
    <string name="rare_11">Rare 11</string>
    <string name="rare_0">Rare 0</string>
    <string name="rare_1">Rare 1</string>
    <string name="rare_4">Rare 4</string>
</resources>
