<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sliding.SlidingActivity"
    android:id="@+id/weaponPage"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Score"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/tvScore"
            android:layout_marginStart="80dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="28sp"/>



    </RelativeLayout>

    <com.example.myapplication.sliding.SlidingGrid
        android:id="@+id/weaponView"
        android:layout_marginTop="50dp"
        android:layout_width="fill_parent"
        android:layout_height="500dp">


    </com.example.myapplication.sliding.SlidingGrid>

<!--    <Button-->
<!--        android:id="@+id/Pause2048"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="60dp"-->
<!--        android:layout_marginTop="550dp"-->
<!--        android:layout_marginStart="3dp"-->
<!--        android:layout_marginBottom="0dp"-->
<!--        android:background="#CDDC39"-->
<!--        android:text="@string/pause"-->
<!--        android:textSize="18sp" />-->

    <Button
        android:id="@+id/Save2048"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="550dp"
        android:background="#CDDC39"
        android:text="@string/save"
        android:textSize="18sp" />

    <Button
        android:id="@+id/Help2048"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_toEndOf="@+id/Save2048"
        android:layout_marginStart="30dp"
        android:layout_marginTop="550dp"
        android:background="#CDDC39"
        android:text="@string/help"
        android:textSize="18sp" />

    <Button
        android:id="@+id/BacktoMain"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_toEndOf="@+id/Help2048"
        android:layout_marginStart="30dp"
        android:layout_marginTop="550dp"
        android:background="#CDDC39"
        android:text="@string/back"
        android:textSize="18sp" />


</RelativeLayout>